--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "type": "module",
   "scripts": {
-    "start": "node src/server.js"
+    "start": "nodemon src/server.js"
   },
   "dependencies": {
     "express": "^5.1.0",
     "express-handlebars": "^8.0.3",
     "express-session": "^1.18.2",
     "hbs": "^4.2.0",
-    "mysql2": "^3.15.3"
+    "mysql2": "^3.15.3",
+    "nodemon": "^3.1.11"
   }
 }
